--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ target 'proyecto' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'RealmJS', :path => '../node_modules/realm'
+
   target 'proyectoTests' do
     inherit! :complete
     # Pods for testing
